syntax = "proto3";

option go_package = "github.com/thek4n/paste.thek4n.ru/pkg/apikeys";

enum UsageReason {
  CUSTOMKEY = 0;
  CUSTOMKEYLEN = 1;
  PERSISTKEY = 2;
  LARGEBODY = 3;
}

message APIKeyUsage {
    string apikey_id = 1;
    string fromIP = 2;
    UsageReason reason = 3;
}
